tests/error/union_global_private.gw
#! [contains] can only be used at class scope.
union static U { int };
